--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 </div>
             <div><strong>Das Gebäude wird virtuell erlebbar:</strong><br>
                 Photorealistische Darstellung und Filmvisualisierung als sichere Entscheidungs&shy;grundlage und als Präsentationsmedium.</div>
-            <div><strong>Im Kosten-
+            <div><strong>Transparenz im Kosten-
                 und Terminmanagement:</strong><br> 
                 Frühe Integration aller Kostenfaktoren in die Entwurfsplanung für ein Optimum an Architektur&shy;qualität und Funktionalität im Rahmen der verfügbaren Mittel.</div>
             <div><strong>Schwerpunkt "Baugeschichtsaufgaben":</strong><br>
@@ -404,6 +404,24 @@
             <div class="project" onclick="" style="background-image: url(severinsstr/imgs/2001Severin-teaser.jpg);">
                <a class="projectinfo" href="severinsstr/index.php"></a>
                <div class="projecttext">2001<br>Köln Severinviertel</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(haus3/imgs/2001Haus3-teaser.jpg);">
+               <a class="projectinfo" href="haus3/planung.php"></a>
+               <div class="projecttext">2001<br>Haus 3</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(dlf/imgs/2000DLF-teaser.jpg);">
+               <a class="projectinfo" href="dlf/planung.php"></a>
+               <div class="projecttext">2001-2000<br>Deutschlandfunk</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(uedesheim/imgs/1999Neuss-teaser.jpg);">
+               <a class="projectinfo" href="uedesheim/planung.php"></a>
+               <div class="projecttext">1999<br>Neuss-Uedesheim
+                  Wettbewerb</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(kirmo/imgs/1998-01Mikkola-teaser.jpg);">
+               <a class="projectinfo" href="kirmo/planung.php"></a>
+               <div class="projecttext">1998<br>Helsinki, Finnland
+                  Entwurf Bibliothek</div>
             </div>            
                         
 
