--- a/index.html
+++ b/index.html
@@ -366,6 +366,10 @@
                <a class="projectinfo" href="duennwald/planung.php"></a>
                <div class="projecttext">2006<br>Köln Dünnwald</div>
             </div>            
+            <div class="project" onclick="" style="background-image: url(manila/imgs/2006-02Manila-teaser.jpg);">
+               <a class="projectinfo" href="manila/vorher.php"></a>
+               <div class="projecttext">2006<br>Manila, Philippinen</div>
+            </div>            
             <div class="project" onclick="" style="background-image: url(ehrenfeld/imgs/2005Hinterhofwerkstatt-teaser.jpg);">
                <a class="projectinfo" href="ehrenfeld/planung.php"></a>
                <div class="projecttext">2004<br>Köln Ehrenfeld</div>
@@ -422,6 +426,23 @@
                <a class="projectinfo" href="kirmo/planung.php"></a>
                <div class="projecttext">1998<br>Helsinki, Finnland
                   Entwurf Bibliothek</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(pavillion/imgs/1997Pavillion-teaser.jpg);">
+               <a class="projectinfo" href="pavillion/planung.php"></a>
+               <div class="projecttext">1997<br>Helsinki, Finnland</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(peltoniemi/imgs/1995-01Peltoniemi-teaser.jpg);">
+               <a class="projectinfo" href="peltoniemi/planung.php"></a>
+               <div class="projecttext">1995<br>Finnland Haus Peltoniemi</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(leipzig/imgs/94Leipzig-teaser.jpg);">
+               <a class="projectinfo" href="leipzig/planung.php"></a>
+               <div class="projecttext">1994<br>Leipzig
+                  Stephanstraße</div>
+            </div>            
+            <div class="project" onclick="" style="background-image: url(onepackage/imgs/92OnePackageHouse-teaser.jpg);">
+               <a class="projectinfo" href="onepackage/planung.php"></a>
+               <div class="projecttext">1992<br>Tinyhouse</div>
             </div>            
                         
 
