--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kai Matzak Architekt Köln, Kartäuserhof 19 50678 Köln">
     <title>Kai Matzak - Architekt - Köln</title>
 </head>
 <body>
@@ -12,10 +13,10 @@
         <header class="has-no-navigation">
             <div class="logo-line"></div>
             <a href="index.html">
-                <img class="header-text" src="imgs/Kai-Matzak-Schrift.svg" alt="Kai-Matzak-Schrift">
+                <img class="header-text" src="imgs/Kai-Matzak-Schrift.svg" alt="Kai Matzak Architekt Köln">
             </a>
             <a href="index.html"> 
-                <img class="logo" src="imgs/Kai-Matzak-Logo.svg" alt="Kai-Matzak-Logo">
+                <img class="logo" src="imgs/Kai-Matzak-Logo.svg" alt="Kai Matzak Logo">
             </a>
             
         </header>
@@ -427,8 +428,8 @@
                <div class="projecttext">1998<br>Helsinki, Finnland
                   Entwurf Bibliothek</div>
             </div>            
-            <div class="project" onclick="" style="background-image: url(pavillion/imgs/1997Pavillion-teaser.jpg);">
-               <a class="projectinfo" href="pavillion/planung.php"></a>
+            <div class="project" onclick="" style="background-image: url(helsinki/imgs/1997Pavillion-teaser.jpg);">
+               <a class="projectinfo" href="helsinki/planung.php"></a>
                <div class="projecttext">1997<br>Helsinki, Finnland</div>
             </div>            
             <div class="project" onclick="" style="background-image: url(peltoniemi/imgs/1995-01Peltoniemi-teaser.jpg);">
