--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
             </div>            
             <div class="project" onclick="" style="background-image: url(rieden/imgs/2007-09Rieden-teaser.jpg);">
                <a class="projectinfo" href="rieden/planung.php"></a>
-               <div class="projecttext">2007<br>Rieden, Rheinland-Pfalz (Eifel)</div>
+               <div class="projecttext">2007<br>Rieden (Eifel)</div>
             </div>            
             <div class="project" style="background-image: url(kartaeuserhof/imgs/Kartaeuserhof-teaser.jpg)"> 
                <a class="projectinfo" href="kartaeuserhof/index.php"></a>
-               <div class="projecttext">2006<br>Kartäuserhof 19<br>Köln</div>
+               <div class="projecttext">2006<br>Köln Severinsviertel</div>
            </div>                       
             <div class="project" onclick="" style="background-image: url(duennwald/imgs/2006-01NeubauDuennwald-teaser.jpg);">
                <a class="projectinfo" href="duennwald/planung.php"></a>
@@ -387,7 +387,7 @@
             </div>            
             <div class="project" onclick="" style="background-image: url(prumbaum/imgs/2003Prumbaum-teaser.jpg);">
                <a class="projectinfo" href="prumbaum/index.php"></a>
-               <div class="projecttext">2003<br>Prumbaum</div>
+               <div class="projecttext">2003<br>Bergisch-Gladbach</div>
             </div>            
             <div class="project" onclick="" style="background-image: url(haus9/imgs/2003Haus9-teaser.jpg);">
                <a class="projectinfo" href="haus9/planung.php"></a>
@@ -399,8 +399,7 @@
             </div>            
             <div class="project" onclick="" style="background-image: url(dellanna/imgs/2002Dellanna-teaser.jpg);">
                <a class="projectinfo" href="dellanna/index.php"></a>
-               <div class="projecttext">2001<br>Köln Braunsfeld
-                  Haus Dellanna</div>
+               <div class="projecttext">2001<br>Köln Braunsfeld</div>
             </div>            
             <div class="project" onclick="" style="background-image: url(severinsstr/imgs/2001Severin-teaser.jpg);">
                <a class="projectinfo" href="severinsstr/index.php"></a>
@@ -412,7 +411,7 @@
             </div>            
             <div class="project" onclick="" style="background-image: url(dlf/imgs/2000DLF-teaser.jpg);">
                <a class="projectinfo" href="dlf/planung.php"></a>
-               <div class="projecttext">2001-2000<br>Deutschlandfunk</div>
+               <div class="projecttext">2000-2001<br>Deutschlandfunk</div>
             </div>            
             <div class="project" onclick="" style="background-image: url(uedesheim/imgs/1999Neuss-teaser.jpg);">
                <a class="projectinfo" href="uedesheim/planung.php"></a>
@@ -421,8 +420,7 @@
             </div>            
             <div class="project" onclick="" style="background-image: url(kirmo/imgs/1998-01Mikkola-teaser.jpg);">
                <a class="projectinfo" href="kirmo/planung.php"></a>
-               <div class="projecttext">1998<br>Helsinki, Finnland
-                  Entwurf Bibliothek</div>
+               <div class="projecttext">1998<br>Finnland, Helsinki Wettbewerb</div>
             </div>            
             <div class="project" onclick="" style="background-image: url(helsinki/imgs/1997Pavillion-teaser.jpg);">
                <a class="projectinfo" href="helsinki/planung.php"></a>
@@ -430,12 +428,11 @@
             </div>            
             <div class="project" onclick="" style="background-image: url(peltoniemi/imgs/1995-01Peltoniemi-teaser.jpg);">
                <a class="projectinfo" href="peltoniemi/planung.php"></a>
-               <div class="projecttext">1995<br>Finnland Haus Peltoniemi</div>
+               <div class="projecttext">1995<br>Finnland, Kuopio</div>
             </div>            
             <div class="project" onclick="" style="background-image: url(leipzig/imgs/94Leipzig-teaser.jpg);">
                <a class="projectinfo" href="leipzig/planung.php"></a>
-               <div class="projecttext">1994<br>Leipzig
-                  Stephanstraße</div>
+               <div class="projecttext">1994<br>Leipzig</div>
             </div>            
             <div class="project" onclick="" style="background-image: url(onepackage/imgs/92OnePackageHouse-teaser.jpg);">
                <a class="projectinfo" href="onepackage/planung.php"></a>
