--- a/datenschutz.html
+++ b/datenschutz.html
@@ -14,10 +14,10 @@
             <a href="index.html">
                 <img class="header-text" src="imgs/Kai-Matzak-Schrift.svg" alt="Kai-Matzak-Schrift">
             </a>
-            <a href="index.html"> 
+            <a href="index.html">
                 <img class="logo" src="imgs/Kai-Matzak-Logo.svg" alt="Kai-Matzak-Logo">
             </a>
-            
+
         </header>
 
          <div class="kontakt__container">
@@ -82,7 +82,7 @@
             <div class="footer-links">
                 <a href="impressum.html">Impressum</a>
                 <a href="datenschutz.html">Datenschutz</a>
-                <a href="energiepass.html">Energiepass</a>
+              <a href="projektliste.html">Projektliste</a>
             </div>
             <div class="contactinfo"><strong>Kai Matzak</strong><br>
     Freier Architekt<br>
